--- a/index.html
+++ b/index.html
@@ -40,12 +40,12 @@
 
   <!-- ======= Top Bar ======= -->
   <section id="topbar" class="d-flex align-items-center">
-    <div class="container d-flex justify-content-center justify-content-md-between">
+    <div class="container d-flex justify-content-between justify-content-md-between">
       <div class="contact-info d-flex align-items-center">
-        <i class="bi bi-envelope d-flex align-items-center"><a href="mailto:info@southindianbricks.com">info@southindianbricks.com</a></i>
+        <i id="top__mail" class="bi bi-envelope d-fle align-items-center"><a href="mailto:sibcosouthindianbricks@gmail.com"> sibcosouthindianbricks@gmail.com</a></i>
         <i class="bi bi-phone d-flex align-items-center ms-4"  ><a href="tel:+919745432173" style="margin-left: -8px;"><span>+91 9745 432 173</span></a></i>
       </div>
-      <div class="social-links d-none d-md-flex align-items-center">
+      <div class="social-links -none d-md-flex align-items-center">
 
         <a target="_blank" href="https://www.facebook.com/southindianbrickscompany?mibextid=LQQJ4d" class="facebook"><i class="bi bi-facebook"></i></a>
         <a target="_blank" href="https://www.instagram.com/southindianbrickscompany?igsh=eTJ1c2JuZm43dGtm" class="instagram"><i class="bi bi-instagram"></i></a>
@@ -150,8 +150,11 @@
   <!-- ======= Hero Section ======= -->
   <section id="hero" class="d-flex align-items-center">
     <div class="container" data-aos="zoom-out" data-aos-delay="100">
-      <h1>South Indian Bricks  </h1>
-      <h2>Building Tomorrow, Brick by Brick: Embrace the Earth with Our Strong Bricks!</h2>
+      <h1>Mud Block/ <br> Interlocking <br> Compressed Soil   Earth Bricks </h1>
+      <!-- <h2>Building Tomorrow, Brick by Brick: Embrace the Earth with Our Strong Bricks!</h2> -->
+
+      <h2>Build your house with interlocking mud blocks. <br>
+      We are manufacturers, suppliers and builders of <br> interlocking mud block building construction.</h2>
       <div class="d-flex">
         <a href="#about" class="btn-get-started scrollto">Get Started</a>
         <!-- <a href="https://www.youtube.com/watch?v=jDDaplaOz7Q" class="glightbox btn-watch-video"><i class="bi bi-play-circle"></i><span>Watch Video</span></a> -->
@@ -699,7 +702,7 @@
             <div class="info-box  mb-4">
               <i class="bx bx-envelope"></i>
               <h3>Email Us</h3>
-              <p>info@southindianbricks.com</p>
+              <p>sibcosouthindianbricks@gmail.com</p>
             </div>
           </div>
 
@@ -782,7 +785,7 @@
                676553 <br><br>
               <strong>Phone:</strong> +91 974 543 2173<br>  
               <strong>Phone : </strong> +91 799 483 6161 <br> 
-              <strong>Email:</strong> info@southindianbricks.com<br>
+              <strong>Email:</strong> sibcosouthindianbricks@gmail.com<br>
             </p>
           </div>
 
