--- a/index.html
+++ b/index.html
@@ -153,8 +153,11 @@
       <h1>Mud Block/ <br> Interlocking <br> Compressed Soil   Earth Bricks </h1>
       <!-- <h2>Building Tomorrow, Brick by Brick: Embrace the Earth with Our Strong Bricks!</h2> -->
 
-      <h2>Build your house with interlocking mud blocks. <br>
+      <h2 class="d-none d-md-flex">Build your house with interlocking mud blocks. <br>
       We are manufacturers, suppliers and builders of <br> interlocking mud block building construction.</h2>
+      <h2 class="d-md-none">Build your house with interlocking mud blocks. <br>
+        We are manufacturers, suppliers and builders of  interlocking mud block building construction.</h2>
+       
       <div class="d-flex">
         <a href="#about" class="btn-get-started scrollto">Get Started</a>
         <!-- <a href="https://www.youtube.com/watch?v=jDDaplaOz7Q" class="glightbox btn-watch-video"><i class="bi bi-play-circle"></i><span>Watch Video</span></a> -->
@@ -651,7 +654,7 @@
             <div class="icon-box" data-aos="fade-up" data-aos-delay="100">
               <div class="icon"><i class="bi bi-feather"></i></div>
               <h4 class="title"><a href="">Aesthetic</a></h4>
-              <p   class="description">A house built with ourSoil Blocks looks elegant, is structurally strong & aesthetically appealing.</p>
+              <p   class="description">A house built with our Soil Blocks looks elegant, is structurally strong & aesthetically appealing.</p>
             </div>
           </div>
           <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0">
