--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
   </section>
 
   <!--<<<<<<<< whatsappp popup >>>>>>>>>> -->
-  <a href="whatsapp://send?phone=+91 9745432173" data-action="share/whatsapp/share"  class="float"  >
+  <a href="whatsapp://send?phone=+919745432173" data-action="share/whatsapp/share"  class="float"  >
     <i class="bi bi-whatsapp " id="my-float"></i>
     <span style="margin-left:5px;">Chat with us</span>
  
@@ -386,7 +386,7 @@
           </ul><ul class="col-lg-6"><li>Colour: Varying shades of earth</li>
             </ul> </div>
            <div class="row" style="margin-top: 10px;"> 
-            <ul class="col-lg-6"> <li>Size: L x W x H (300x150x90mm) or (1ft x 6in x 3.5in)</li>
+            <ul class="col-lg-6"> <li>Size: L x W x H (279x203x127mm & 279x152x127mm) or (11x8x5 inches & 11x6x5 inches) </li>
           </ul> <ul class="col-lg-6"><li >Compression Strength: More than 12 MPa (120 Kg/cm2)</li>
             </ul></div>
            <div class="row" style="margin-top: 10px;"> 
