--- a/index.html
+++ b/index.html
@@ -781,8 +781,8 @@
         <div class="row">
 
           <div class="col-lg-3 col-md-6 footer-contact">
-            <h3>BizLand<span>.</span></h3>
-            <p>
+          <img style="max-width: 130px;" alt="" src="assets/img/logo-2.png" />
+            <p style="margin-top: 10px;">
               Pullamparamba <br>
               Karekkad, Kerala<br>
                676553 <br><br>
