Update social links

--- a/index.html
+++ b/index.html
@@ -47,13 +47,13 @@
       </div>
       <div class="social-links -none d-md-flex align-items-center">
 
-        <a target="_blank" href="https://www.facebook.com/southindianbrickscompany?mibextid=LQQJ4d" class="facebook"><i class="bi bi-facebook"></i></a>
-        <a target="_blank" href="https://www.instagram.com/southindianbrickscompany?igsh=eTJ1c2JuZm43dGtm" class="instagram"><i class="bi bi-instagram"></i></a>
-        <a href="" class="twitter"><i class="bi bi-twitter-x"></i></a>
-        <a href="" class="twitter"><i class="bi bi-pinterest"></i></a>
+        <a target="_blank" href="https://www.facebook.com/southindianbricks" class="facebook"><i class="bi bi-facebook"></i></a>
+        <a target="_blank" href="https://www.instagram.com/southindianbricks" class="instagram"><i class="bi bi-instagram"></i></a>
+        <a href="https://x.com/IndianBricks/" class="twitter"><i class="bi bi-twitter-x"></i></a>
+        <a href="https://www.pinterest.com/sibcosouthindianbricks/" class="twitter"><i class="bi bi-pinterest"></i></a>
       
-        <a href="#" class="linkedin"><i class="bi bi-linkedin"></i></i></a>
-        <a href="" class="twitter"><i class="bi bi-youtube"></i></a>
+        <a href="www.linkedin.com/in/southindianbricks" class="linkedin"><i class="bi bi-linkedin"></i></i></a>
+        <a href="https://youtube.com/@southindianbricks" class="twitter"><i class="bi bi-youtube"></i></a>
       </div>
     </div>
   </section>
@@ -723,9 +723,10 @@
         <div class="row" data-aos="fade-up" data-aos-delay="100">
 
           <div class="col-lg-6 ">
-            <iframe class="mb-4 mb-lg-0" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3917.225836629382!2d76.09082897480747!3d10.946305989212977!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3ba7b579cdc34d35%3A0x5a7a62af7dcbe7cb!2sSouth%20Indian%20Bricks%20Company!5e0!3m2!1sen!2sin!4v1716033249929!5m2!1sen!2sin" frameborder="0" style="border:0; width: 100%; height: 384px;" allowfullscreen></iframe>
+            <iframe class="mb-4 mb-lg-0" src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d62675.61338378806!2d76.0213061!3d10.946306!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3ba7b579cdc34d35%3A0x5a7a62af7dcbe7cb!2sSouth%20Indian%20Bricks%20%7C%20Interlocking%20Soil%20Bricks!5e0!3m2!1sen!2sin!4v1718943770019!5m2!1sen!2sin" frameborder="0" style="border:0; width: 100%; height: 384px;" allowfullscreen></iframe>
           </div>
-          <!-- <iframe src="" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe> -->
+
+            <!-- <iframe src="" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe> -->
 
           <div class="col-lg-6">
             <form action="forms/contact.php" method="post" role="form" class="php-email-form">
@@ -819,12 +820,12 @@
             <p>Follow us for updates and exclusive content!</p>
             <div class="social-links mt-3">
               
-              <a href="https://www.facebook.com/southindianbrickscompany?mibextid=LQQJ4d" class="facebook"><i class="bi bi-facebook"></i></a>
-              <a href="https://www.instagram.com/southindianbrickscompany?igsh=eTJ1c2JuZm43dGtm" class="instagram"><i class="bi bi-instagram"></i></a>
-              <a href="#" class="twitter"><i class="bi bi-twitter-x"></i></a>
-              <a href="#" class="twitter"><i class="bi bi-pinterest"></i></a>
-              <a href="#" class="twitter"><i class="bi bi-linkedin"></i></a>
-              <a href="#" class="twitter"><i class="bi bi-youtube"></i></a>
+              <a href="https://www.facebook.com/southindianbricks" class="facebook"><i class="bi bi-facebook"></i></a>
+              <a href="https://www.instagram.com/southindianbricks" class="instagram"><i class="bi bi-instagram"></i></a>
+              <a href="https://x.com/IndianBricks/" class="twitter"><i class="bi bi-twitter-x"></i></a>
+              <a href="https://www.pinterest.com/sibcosouthindianbricks/" class="twitter"><i class="bi bi-pinterest"></i></a>
+              <a href="www.linkedin.com/in/southindianbricks" class="twitter"><i class="bi bi-linkedin"></i></a>
+              <a href="https://youtube.com/@southindianbricks" class="twitter"><i class="bi bi-youtube"></i></a>
               <!-- <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a> -->
             </div>
           </div>
