--- a/index.html
+++ b/index.html
@@ -723,10 +723,8 @@
         <div class="row" data-aos="fade-up" data-aos-delay="100">
 
           <div class="col-lg-6 ">
-            <iframe class="mb-4 mb-lg-0" src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d62675.61338378806!2d76.0213061!3d10.946306!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3ba7b579cdc34d35%3A0x5a7a62af7dcbe7cb!2sSouth%20Indian%20Bricks%20%7C%20Interlocking%20Soil%20Bricks!5e0!3m2!1sen!2sin!4v1718943770019!5m2!1sen!2sin" frameborder="0" style="border:0; width: 100%; height: 384px;" allowfullscreen></iframe>
+            <iframe class="mb-4 mb-lg-0" src="https://www.google.com/maps/embed?pb=!1m17!1m12!1m3!1d3917.2670509160084!2d76.09060287504431!3d10.94318868921587!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m2!1m1!2zMTDCsDU2JzM1LjUiTiA3NsKwMDUnMzUuNCJF!5e0!3m2!1sen!2sin!4v1719666022246!5m2!1sen!2sin" frameborder="0" style="border:0; width: 100%; height: 384px;" allowfullscreen></iframe>
           </div>
-
-            <!-- <iframe src="" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe> -->
 
           <div class="col-lg-6">
             <form action="forms/contact.php" method="post" role="form" class="php-email-form">
