--- a/index.html
+++ b/index.html
@@ -781,13 +781,13 @@
 
           <div class="col-lg-3 col-md-6 footer-contact">
           <img style="max-width: 130px;" alt="" src="assets/img/logo-2.png" />
-            <p style="margin-top: 10px;">
+            <p style="margin-top: 10px; white-space: nowrap;">
               Pullamparamba <br>
               Karekkad, Kerala<br>
                676553 <br><br>
               <strong>Phone:</strong> +91 974 543 2173<br>  
               <strong>Phone : </strong> +91 799 483 6161 <br> 
-              <strong>Email:</strong> sibcosouthindianbricks@gmail.com<br>
+              <strong >Email:</strong> sibcosouthindianbricks@gmail.com<br>
             </p>
           </div>
 
